# llm

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Makefile.train  README.md  STATUS.md  TODO.md  check_config.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_app.py  run_streamlit.py  setup.py  src.txt
PROMPT/: 1.md
configs/: default.yaml  production.yaml  quick_test.yaml
docs/: TRAIN.md  conf.py  model_architecture.md  pipeline.md  quickstart.md  training.md  training_index.md
docs/roadmap/: README.md
examples/advanced/: custom_dataset.py  custom_model.py  multi_gpu_training.py
examples/api_usage/: rest_client.py  websocket_client.py
examples/basic_usage/: README.md  inference_simple.py  train_simple.py
examples/polish_specific/: question_answering.py  sentiment_analysis.py  text_generation.py
scripts/: benchmark.py  convert_model.py  evaluate.py  inference.py  merge_lora.py  prepare_data.py  serve.py  train.py
tests/: conftest.py
tests/e2e/: test_docker.py  test_full_workflow.py
tests/integration/: test_api.py  test_data_pipeline.py  test_inference_pipeline.py  test_training_pipeline.py
tests/unit/: test_data.py  test_inference.py  test_models.py  test_polish.py  test_training.py  test_utils.py
tools/: data_validators.py  gpu_utils.py  memory_monitor.py  model_analyzer.py  performance_profiler.py
tools/export/: mobile_converter.py  onnx_converter.py  tensorrt_converter.py
train/: Makefile  README.md
train/scripts/: check_gpu.sh  prepare_data.sh  setup_wandb.sh  setup_wandb_local.sh  tensorboard.sh  train.sh  train_multi_gpu.sh
wronai/: __init__.py  version.py
wronai/config/: base.py  inference.py  training.py
wronai/data/: __init__.py  collectors.py  dataset.py  preprocessing.py  tokenizer.py
wronai/data/polish/: __init__.py  morphology.py  normalization.py  stopwords.txt
wronai/evaluation/: benchmarks.py  metrics.py  polish_eval.py  reports.py
wronai/inference/: __init__.py  api.py  chat.py  engine.py  pipeline.py
wronai/models/: __init__.py  base.py  llama.py  lora.py  mistral.py  quantization.py
wronai/training/: __init__.py  callbacks.py  config.py  optimizer.py  scheduler.py  trainer.py  utils.py
wronai/utils/: __init__.py  cleanup.py  device.py  download.py  helpers.py  logging.py  memory.py  monitoring.py  visualization.py
wronai/web/: app.py
wronai/web/api/: models.py  routes.py
wronai_data/: .gitignore  Dockerfile  HOW.md  Makefile  README.md  collect_wronai_data.py  metadata.json  requirements.txt  setup.sh  src.txt
wronai_data/metadata/: dataset_metadata.json
wronai_data/scripts/: collect_wronai_data.py  collect_wronai_data_fixed.py  inference.py  pipeline.py  processor.py  quick_data_collection.py  test_data_collection.py  trainer.py
wronai_data/wronai_simple_data/: collection_summary.json  lektury.jsonl  synthetic.jsonl
